-some bugs fixed

--- a/bakery-order-site-final/index-main.html
+++ b/bakery-order-site-final/index-main.html
@@ -29,7 +29,7 @@
 
      <div>
       <nav class="navbar">
-        <a class="active" href="#home">home</a>
+        <a href="#home">home</a>
         <a href="#dishes">dishes</a>
         <a href="#about">about</a>
         <a href="#menu">menu</a>
@@ -61,7 +61,7 @@
 
 
                             <!--home section start-->
-
+<section class="home" id="home">
 
    <div class="home container" id="home">
      <div class="col-3">
@@ -85,6 +85,7 @@
    </div>
           <div class="col-2"></div>
  </div>
+ </section>
 
                            <!---home section end---->
 
@@ -258,8 +259,8 @@
 <!---  menu section start----->
 
 <section class="menu" id="menu">
-  <h3 class="sub-heading">our menu</h3>
-  <h1 class="heading"> today's speacile</h1>
+  <h3 class="sub-heading">menu</h3>
+  <h1 class="heading"> our speciality</h1>
    <div class="box-container">
      <div class="box">
        <div class="image">
