design error fixd + home menu added in login page

--- a/bakery-order-site-final/index-main.html
+++ b/bakery-order-site-final/index-main.html
@@ -42,7 +42,7 @@
         <i class="fas fa-search" id="search-icon"></i>
         <a href="#" class=" fas fa-heart"></a>
         <a href="#" class=" fas fa-shopping-cart"></a>
-        <a class="fas fa-user" href="login-register/login.html"></a>
+        <a class="fas fa-user" href="login.html"></a>
      </div>
 
      </nav>
